gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test11006.d
version https://git-lfs.github.com/spec/v1
oid sha256:443f3addd7351fe0eb7f8a088e114e1e7cddfbbcb564768cf1fdb9f303c710d8
size 550
